# Flatpack

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Flatpack.aps  Flatpack.cpp  Flatpack.manifest  Flatpack.rc  Flatpack.sln  Flatpack.vcxproj  FlatpackPreview.html  Flatpackdev.manifest  LICENSE  MIT.txt  README.md  clock.cpp  copy_fusion360_api_dir.py  find_fusion360_api_dir.py  resource.h  test_manual_procedure.md  test_menu_integration.md  test_menu_integration.py  test_sanity.md  test_sanity.py
.github/workflows/: build.yml
Flatpack.bundle/Contents/: Flatpack.manifest
Flatpack.xcodeproj/: project.pbxproj
FlatpackInstaller/: FlatpackInstaller.wixproj  Product.wxs
FlatpackTests/: CMakeLists.txt  FlatpackTests.cpp  FlatpackTests.vcxproj  FlatpackTests.vcxproj.filters  desktop.ini  ga_test.cpp  nester_test.cpp  placer_test.cpp  transformer_test.cpp  unittest1.cpp
Nester/: DXFWriter.cpp  DXFWriter.h  DXFWriter.hpp  GA.hpp  Nester.cpp  Nester.h  Nester.hpp  SVGWriter.cpp  SVGWriter.hpp  Units.cpp  Units.h  Units.hpp  clock.hpp
doc/: MARKETPLACE_LISTING.md  TODO.md  USER_GUIDE.md  privacy_policy.md
libnfporb/: LGPL.txt  LICENSE.readme.txt  libnfb_implementation.hpp  libnfp.hpp
scripts/: copy_fusion360_api_dir.py  test_menu_integration.py
src/: Flatpack.cpp  Validate.cpp  Validate.hpp
src/Writer/: DXFWriter.cpp  DXFWriter.hpp  FileWriter.hpp  Nester.hpp  SVGWriter.cpp  SVGWriter.hpp
tests/: test_menu_integration.md
